--- a/index.html
+++ b/index.html
@@ -1,16 +1,129 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>My Free Website</title>
-    <style>
-      body { font-family: Arial; margin: 2em auto; max-width: 600px; line-height: 1.6; }
-      h1 { color: #0078e7; }
-    </style>
-  </head>
-  <body>
-    <h1>Welcome to My Website!</h1>
-    <p>This is my free website hosted on GitHub Pages 🎉</p>
-    <p>Contact me at: your@email.com</p>
-  </body>
+<html lang="ar">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>C Bonaji | مدربك الشخصي</title>
+  <style>
+    body {
+      font-family: 'Cairo', sans-serif;
+      direction: rtl;
+      margin: 0;
+      padding: 0;
+      background: #f7f8fa;
+      color: #222;
+    }
+    header {
+      background: linear-gradient(135deg, #111, #444);
+      color: white;
+      text-align: center;
+      padding: 60px 20px;
+    }
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+      letter-spacing: 1px;
+    }
+    header p {
+      font-size: 1.1rem;
+      opacity: 0.9;
+    }
+    section {
+      padding: 40px 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+    h2 {
+      color: #1a73e8;
+      margin-bottom: 15px;
+    }
+    .services {
+      display: grid;
+      gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    }
+    .card {
+      background: white;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      transition: transform 0.2s;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+    }
+    footer {
+      background: #111;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9rem;
+    }
+    a {
+      color: #1a73e8;
+      text-decoration: none;
+    }
+    .contact a {
+      display: inline-block;
+      margin: 8px 12px;
+      background: #1a73e8;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 6px;
+    }
+    .contact a:hover {
+      background: #0f5ad3;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>C Bonaji</h1>
+    <p>مدربك الشخصي لتصميم خطة تغذية وتمارين تناسبك 💪</p>
+  </header>
+
+  <section id="about">
+    <h2>عن المدرب</h2>
+    <p>
+      أنا <strong>C Bonaji</strong>، مدرب شخصي متخصص في تحسين اللياقة البدنية وتغيير نمط الحياة.
+      أساعدك على الوصول إلى أهدافك من خلال خطط مخصصة للتمارين والتغذية تناسب وقتك ومستواك البدني.
+    </p>
+  </section>
+
+  <section id="services">
+    <h2>الخدمات</h2>
+    <div class="services">
+      <div class="card">
+        <h3>📋 خطة تمارين مخصصة</h3>
+        <p>برنامج تمرين متكامل بناءً على هدفك (خسارة وزن – بناء عضل – تحسين اللياقة).</p>
+      </div>
+      <div class="card">
+        <h3>🥗 خطة تغذية شخصية</h3>
+        <p>نظام غذائي متوازن حسب احتياجك من السعرات ونوع جسمك وهدفك.</p>
+      </div>
+      <div class="card">
+        <h3>📅 متابعة أسبوعية</h3>
+        <p>تقييم التقدم بشكل دوري وتعديل الخطط لتحقيق أفضل نتيجة ممكنة.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="how">
+    <h2>كيف تبدأ</h2>
+    <p>كل ما عليك فعله هو التواصل معي لتعبئة استمارة قصيرة أتعرف فيها على هدفك ووقتك المتاح، وبعدها أبدأ بإعداد خطة مصممة خصيصًا لك.</p>
+  </section>
+
+  <section id="contact" class="contact">
+    <h2>تواصل معي</h2>
+    <a href="mailto:your@email.com">📧 البريد الإلكتروني</a>
+    <a href="https://wa.me/201000000000" target="_blank">💬 واتساب</a>
+    <a href="https://instagram.com/" target="_blank">📸 إنستغرام</a>
+  </section>
+
+  <footer>
+    <p>© 2025 C Bonaji — جميع الحقوق محفوظة</p>
+  </footer>
+
+</body>
 </html>
