--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
   <section id="contact" class="contact">
     <h2>تواصل معي</h2>
-    <a href="mailto:your@email.com">📧 البريد الإلكتروني</a>
+    <a href="mailto:c.bonaji.co@gmail.com">📧 البريد الإلكتروني</a>
     <a href="https://wa.me/201000000000" target="_blank">💬 واتساب</a>
     <a href="https://instagram.com/" target="_blank">📸 إنستغرام</a>
   </section>
